<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ballbook</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Book">预订</string>
    <string name="Order">订单</string>
    <string name="Person">个人</string>
    <string name="time">营业时间</string>
    <string name="book_date">预订日期</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="seller">选择商家</string>
    <string name="seller_">商家</string>
    <string name="username">用户名</string>
    <string name="user">用户</string>
    <string name="sellername">名称</string>
    <string name="introduction">简介</string>
    <string name="name">姓名</string>
    <string name="phone">电话</string>
    <string name="number">预订数量</string>
    <string name="ball_park_number">球场数</string>
    <string name="add">＋</string>
    <string name="cut">－</string>
    <string name="modify">修改</string>
    <string name="edit">编辑</string>
    <string name="submit">提交</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="remenber">记住我</string>
    <string name="password_search">找回密码</string>
    <string name="password_modify">重置密码</string>
    <string name="old_password">旧密码</string>
    <string name="new_password1">新密码</string>
    <string name="new_password2">确认密码</string>

</resources>
