<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/temp"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:orientation="vertical">

    <TextView
        android:id="@+id/person_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="50dp"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:text="@string/Person" />
    <LinearLayout 
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView 
            android:layout_height="wrap_content"
            android:layout_width="60dp"
            android:text="@string/username"/>"
        <EditText 
            android:background="@android:drawable/edit_text"
            android:focusable="false"
            android:singleLine="true"
            android:id="@+id/username_et"
            android:layout_height="wrap_content"
            android:layout_width="180dp" />         
    </LinearLayout>
    <LinearLayout 
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView 
            android:layout_height="wrap_content"
            android:layout_width="60dp"
            android:text="@string/name"/>
        <EditText 
            android:background="@android:drawable/edit_text"
            android:focusable="false"
            android:singleLine="true"
            android:id="@+id/name_et"
            android:layout_height="wrap_content"
            android:layout_width="180dp" />
    </LinearLayout>
    <LinearLayout 
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView 
            android:layout_height="wrap_content"
            android:layout_width="60dp"
            android:text="@string/phone"/>
        <EditText 
            android:background="@android:drawable/edit_text"
            android:phoneNumber="true"
            android:focusable="false"
            android:singleLine="true"
            android:id="@+id/phone_et"
            android:layout_height="wrap_content"
            android:layout_width="180dp" />
    </LinearLayout>
    <LinearLayout 
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button 
            android:layout_marginRight="40dp"
        	android:id="@+id/edit_btn"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/edit">
    	</Button>
    	<Button 
    	    android:layout_marginLeft="40dp"
        	android:id="@+id/password_modify_btn"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/password_modify">
    	</Button>
    </LinearLayout>
</LinearLayout>