<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/bg">
      <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:text="@string/register"
            android:textColor="@android:color/white"
            android:textSize="30sp" />   
      <LinearLayout 
          android:layout_marginTop="50dp"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:layout_gravity="center_horizontal">
      		<LinearLayout 
      		    android:layout_width="wrap_content"
      		    android:layout_height="wrap_content"
      		    android:orientation="horizontal" >
          		<TextView 
          		    android:layout_width="70dp" 
          		    android:layout_height="wrap_content"
          		    android:text="@string/username" />
          		<EditText 
          		    android:background="@android:drawable/edit_text"
          		    android:maxLength="30"
          		    android:singleLine="true"
          		    android:id="@+id/username_et"
          		    android:layout_width="150dp"
          		    android:layout_height="wrap_content"
          		    />
         	</LinearLayout>
         	<LinearLayout 
      		    android:layout_width="wrap_content"
      		    android:layout_height="wrap_content"
      		    android:orientation="horizontal" >
          		<TextView 
          		    android:layout_width="70dp" 
          		    android:layout_height="wrap_content"
          		    android:text="@string/name" />
          		<EditText 
          		    android:background="@android:drawable/edit_text"
          		    android:maxLength="30"
          		    android:singleLine="true"
          		    android:id="@+id/name_et"
          		    android:layout_width="150dp"
          		    android:layout_height="wrap_content"
          		    />
         	</LinearLayout>
         	<LinearLayout 
      		    android:layout_width="wrap_content"
      		    android:layout_height="wrap_content"
      		    android:orientation="horizontal" >
          		<TextView 
          		    android:layout_width="70dp" 
          		    android:layout_height="wrap_content"
          		    android:text="@string/phone" />
          		<EditText 
          		    android:background="@android:drawable/edit_text"
          		    android:maxLength="30"
          		    android:phoneNumber="true"
          		    android:singleLine="true"
          		    android:id="@+id/phone_et"
          		    android:layout_width="150dp"
          		    android:layout_height="wrap_content"
          		    />
         	</LinearLayout>
         	<LinearLayout 
      		    android:layout_width="wrap_content"
      		    android:layout_height="wrap_content"
      		    android:orientation="horizontal" >
          		<TextView 
          		    android:layout_width="70dp" 
          		    android:layout_height="wrap_content"
          		    android:text="@string/password" />
          		<EditText 
          		    android:background="@android:drawable/edit_text"
          		    android:maxLength="30"
          		    android:password="true"
          		    android:singleLine="true"
          		    android:id="@+id/password1_et"
          		    android:layout_width="150dp"
          		    android:layout_height="wrap_content"
          		    />
         	</LinearLayout>
         	<LinearLayout 
      		    android:layout_width="wrap_content"
      		    android:layout_height="wrap_content"
      		    android:orientation="horizontal" >
          		<TextView 
          		    android:layout_width="70dp" 
          		    android:layout_height="wrap_content"
          		    android:text="@string/new_password2" />
          		<EditText 
          		    android:background="@android:drawable/edit_text"
          		    android:maxLength="30"
          		    android:password="true"
          		    android:singleLine="true"
          		    android:id="@+id/password2_et"
          		    android:layout_width="150dp"
          		    android:layout_height="wrap_content"
          		    />
         	</LinearLayout>
      </LinearLayout>
      <Button 
          android:id="@+id/register_btn"
          android:layout_marginTop="30dp"
          android:layout_gravity="center_horizontal"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/submit" />
</LinearLayout>
