<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <Button
        android:id="@+id/btn_book"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/tab_selected_background"
        android:gravity="center"
        android:text="@string/Book"
        android:textSize="25sp"
        android:textColor="@color/tab_text_color" />

    <Button
        android:id="@+id/btn_order"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/tab_notselected_background"
        android:gravity="center"
        android:text="@string/Order"
        android:textSize="25sp"
        android:textColor="@color/tab_text_color" />

    <Button
        android:id="@+id/btn_person"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/tab_notselected_background"
        android:gravity="center"
        android:text="@string/Person"
        android:textSize="25sp"
        android:textColor="@color/tab_text_color" />

</LinearLayout>