<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">
        <TextView 
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/old_password"
            />
        <EditText 
            android:background="@android:drawable/edit_text"
            android:id="@+id/old_password_et"
            android:singleLine="true"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:password="true"
            />
    </LinearLayout>
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">
        <TextView 
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/new_password1"
            />
        <EditText 
            android:background="@android:drawable/edit_text"
            android:id="@+id/new_password1_et"
            android:singleLine="true"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:password="true"
            />
    </LinearLayout>
        <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">
        <TextView 
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/new_password2"
            />
        <EditText 
            android:background="@android:drawable/edit_text"
            android:id="@+id/new_password2_et"
            android:singleLine="true"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:password="true"
            />
    </LinearLayout>

</LinearLayout>
